$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-03-02 [M] Updated version count as a preparation for the release of cpg1.4.21 {GauGau}
2009-02-20 [B] Fixed 'Selecting private pics as a category thumbnail' issue (thread ID 57898) {Nibbler}
2009-02-04 [M] Release of cpg1.4.20 {GauGau}
2009-02-04 [M] Updated version count as a preparation for the release of cpg1.4.20 {GauGau}
2009-02-02 [S] Added fix for security vulnerability reported on -> http://www.milw0rm.com/exploits/7909 {Aditya}
2009-01-28 [M] Updated header to reflect new year {GauGau}
2009-01-28 [O] Updated XMB bridge file to work with recent versions of that application (user contribution, thread ID 57550) {GauGau}
2008-12-31 [B] Update names associated with pictures and comments when user name is changed {Nibbler}
2008-12-23 [B] Fixed issue involving display of name field in the report to admin form {TranzNDance}
2008-11-09 [B] Added missing translation to German language files (thread ID 56204) {GauGau}
2008-10-20 [M] Re-did the credits section of the language files for easier future integration into cpg1.5.x {GauGau}
2008-10-19 [O] Removed double ; at line ends (thread ID 51899) {GauGau}
2008-10-19 [C] Fixed validation issue with registration screen (thread ID 51310) {GauGau}
2008-10-18 [B] Added error message if pic editor is being run with missing parameters or without authorization (thread ID 54414) {GauGau}
2008-10-18 [B] Fixed error message in ecard.php that complained about wrong recipient email although sender email is wrong (thread ID 50844) {GauGau}
2008-10-18 [C] Fixed minor smilies issue (thread ID 52804) {GauGau}