@@ -26,6 +26,9 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-03-02 [B] Fixed converting 'search_phrase' from array to string for table 'hit_stats' {Paver}
+2009-03-02 [B] Fixed 'unknown' browser field in hit_stats table since SVN 3132 (thread ID 56433) {Paver}
+2009-03-02 [B] Fixed invalid query limit in 'random' meta-album in certain cases (thread ID 52160) {Paver}
 2009-03-02 [M] Updated version count as a preparation for the release of cpg1.4.21 {GauGau}
 2009-02-20 [B] Fixed 'Selecting private pics as a category thumbnail' issue (thread ID 57898) {Nibbler}
 2009-02-04 [M] Release of cpg1.4.20 {GauGau}
